--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "^14.1.2",
     "nextra": "^2.13.4",
     "nextra-theme-docs": "^2.13.4",
+    "@next/third-parties": "^14.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
